compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__invalid_label_shorthand_2.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1487
expression: "\npub fn main() {\n  wibble(:,)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  wibble(:,)
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:10
  │
3 │   wibble(:,)
  │          ^ I was not expecting this

Found `:`, expected one of: 
- `)`
